tests/integration/targets/playbooks/provision_playbook/example.com/platform/nexus/default/ingress-buildtools.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavros-buildtools
  namespace: nexus
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: "true"
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "302"
    konghq.com/plugins: nexus-oidc
spec:
  rules:
    - host: artifacts.tavros.example.com
      http:
        paths:
          - path: /nosso
            pathType: ImplementationSpecific
            backend:
              service:
                name: tavros-nexus-repository-manager
                port:
                  number: 8081
    - host: registry.tavros.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tavros-container-registry
                port:
                  number: 5002
  tls:
    - hosts:
        - artifacts.tavros.example.com
      secretName: nexus-ingress-cert
    - hosts:
        - registry.tavros.example.com
      secretName: nexus-registry-ingress-cert
